--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Unison grammar for tree-sitter",
   "main": "bindings/node",
   "scripts": {
+    "build": "tree-sitter generate",
     "test": "tree-sitter test && script/parse-examples"
   },
   "repository": {
